# TFM

fanuc_cr35ia_support/urdf/: cr35ia_macro.xacro
fanuc_cr7ia_support/urdf/: cr7ia_macro.xacro
fanuc_gazebo/: CMakeLists.txt  package.xml
fanuc_gazebo/config/fanuc_cr7ia/: eff_controllers.yaml  pos_controllers.yaml
fanuc_gazebo/launch/: fanuc_cr35ia_bringup.launch  fanuc_cr7ia_bringup.launch  fanuc_lrmate200i_bringup.launch  fanuc_m10ia_bringup.launch
fanuc_gazebo/launch/inc/: fanuc_control.launch.xml  fanuc_transmissions.xacro  load_cr35ia.launch.xml  load_cr7ia.launch.xml  load_lrmate200i.launch.xml  load_m10ia.launch.xml
fanuc_gazebo/urdf/: cr35ia.xacro  cr35ia_macro.xacro  cr7ia.xacro  cr7ia_macro.xacro  lrmate200i.xacro  lrmate200i_macro.xacro  m10ia.xacro  m10ia_macro.xacro
fanuc_lrmate200i_support/urdf/: lrmate200i_macro.xacro
fanuc_m10ia_support/urdf/: m10ia_macro.xacro
looming-ur/: CMakeLists.txt  README.md
looming-ur/data/: TestPoints.pickle  cycle.txt  cycledata.pickle  cycledata.txt  cyclepoints.pickle  cyclepoints.txt  points.pickle  test1_PAP_script.txt  test2_SORT_script.txt  testPoints.pickle  textdata.txt
looming-ur/script/: File_Edit.py  Move_Robot.py  PLCsim.py  Point_Edit.py  Robot_Info.py  Work_Cycle.py  frames.gv  gui_dmp.py  ur3_controllers.yaml
